Fix layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -320,6 +320,7 @@ input[type="checkbox"] {
 .skills-container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   column-gap: 1rem;
 }
 
@@ -449,7 +450,7 @@ input[type="checkbox"] {
   height: 30vh;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .card {
